k8s/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wit2-devops
  labels:
    app.kubernetes.io/part-of: wit2-devops-project
