k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-simple-api
  namespace: wit2-devops
  labels:
    app: go-simple-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-simple-api
  template:
    metadata:
      labels:
        app: go-simple-api
    spec:
      imagePullSecrets:
        - name: ghcr-credentials
      containers:
        - name: go-simple-api
          image: ghcr.io/akulovnv/wit2-devops-project:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
