k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-simple-api
  namespace: wit2-devops
  labels:
    app: go-simple-api
spec:
  type: ClusterIP
  selector:
    app: go-simple-api
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
